minikube/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stub-service
  namespace: qa
  labels:
    app.kubernetes.io/name: stub-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stub-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
