minikube/qa/ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-qa
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /qa/stub-service/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: stub-service
                port:
                  number: 80

          - path: /qa/stub-service-preview/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: stub-service-preview
                port:
                  number: 80
